# PyTest

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: compliance.yml
src/pu/: math.py
tests/: test_math.py
