[project]
name = "python_unittesting"
version = "1.0.0"
description = "Python code ready for Unittesting"
authors = [
    {name = "Arthur Zopellaro", email = "github@zope.me"},
]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "ruff==0.5.5",
  "mypy==1.11.0",
  "pytest==8.3.1",
  "pytest-cov==5.0.0",
]

[tool.ruff]
line-length = 120
output-format = "concise"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "FA102"]
extend-ignore = ["D"]

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = ["S101"]

[tool.mypy]
strict = true
show_error_codes = true
enable_error_code = "ignore-without-code"
exclude = ["build", ".venv"]

[tool.pytest.ini_options]
addopts = "--cov=pu --cov-report term --cov-report html"

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 100
sort = "cover"
